--- a/KrungRomeHomemade/KrungRomeHomemade.csproj
+++ b/KrungRomeHomemade/KrungRomeHomemade.csproj
@@ -254,5 +254,8 @@
   <ItemGroup>
     <None Include="Resources\Dashbord1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LOGO Krung Rome Homemade.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
