--- a/KrungRomeHomemade/KrungRomeHomemade.csproj
+++ b/KrungRomeHomemade/KrungRomeHomemade.csproj
@@ -111,6 +111,12 @@
     <Compile Include="Admin.Designer.cs">
       <DependentUpon>Admin.cs</DependentUpon>
     </Compile>
+    <Compile Include="CartPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CartPage.Designer.cs">
+      <DependentUpon>CartPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Create_Account.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,6 +155,12 @@
     <Compile Include="OrderPage.Designer.cs">
       <DependentUpon>OrderPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProductDetailForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProductDetailForm.Designer.cs">
+      <DependentUpon>ProductDetailForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProductPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,8 +175,12 @@
     <Compile Include="ReportPage.Designer.cs">
       <DependentUpon>ReportPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Resources\GlobalCart.cs" />
     <EmbeddedResource Include="Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CartPage.resx">
+      <DependentUpon>CartPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Create_Account.resx">
       <DependentUpon>Create_Account.cs</DependentUpon>
@@ -184,6 +200,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OrderPage.resx">
       <DependentUpon>OrderPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProductDetailForm.resx">
+      <DependentUpon>ProductDetailForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProductPage.resx">
       <DependentUpon>ProductPage.cs</DependentUpon>
@@ -292,6 +311,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\LOGO Krung Rome Homemade21.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ถุง.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Krung Rome Homemade.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
